# timeseries-dl

./: README.md  pyproject.toml
notebooks/: 1-DataSetup.ipynb  2-Model.ipynb  3-Example_modelling.ipynb  4. PCA_plots.ipynb
src/: dataset.py  loss.py  model.py
